fix overflow on touch device

--- a/style.css
+++ b/style.css
@@ -19,10 +19,6 @@
   background-color: #f2f2f2;
   border-radius: 12px;
 }
-html {
-  max-width: 100%;
-  overflow-x: hidden;
-}
 body {
   font-family: "AdobeMyungjo", sans-serif;
   max-width: var(--body-width);
@@ -335,5 +331,12 @@ p {
   }
   #playlists span div {
     top: 128px;
+  }
+}
+
+@media (pointer: coarse) {
+  html {
+    max-width: 100%;
+    overflow-x: hidden;
   }
 }
